# ospl

./: .gitignore  CODEBASE.md  Cargo.toml  README.md  ospl-vscode-0.0.1.vsix  simple_test.ospl  test.ospl  test2.ospl  thing.bak  thing.bak2  tuple_prop_access.rs
kevin_stuff/: example_lib.c
scripts/: godDrinksJava.ospl  main.ospl
src/: lib.rs  main.rs
src/ospl/: casts.rs  cffi.rs  ffi.rs  function.rs  interpreter.rs  mod.rs  value_traits.rs
src/ospl/interpreter/: assignop.rs  context.rs  controlflow.rs  function.rs  loops.rs  mod.rs  object.rs
src/ospl/parser/: cffi.rs  controlflow.rs  exprs.rs  import.rs  literal.rs  mod.rs  preprocess.rs  spec.rs  statement.rs  types.rs
tests/: tuple_prop_access.rs  tuple_prop_set.rs
vscode/ospl-vscode/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
vscode/ospl-vscode/syntaxes/: ospl.tmLanguage.json
vscode/ospl-vscode/themes/: ospl-default.json
