[package]
name = "ospl"
version = "0.0.24"
edition = "2024"
license = "GPL-3.0-or-later"
description = "the (UNFINISHED!!!) OSPL programming language"
authors = ["Oscar Langlois <ocyalt4@gmail,com>", "Colton Wollinger <cwoll1home@gmail.com>"]
homepage = "https://ospl-lang.github.io"
readme = "README.md"

[dependencies]
libloading = "0.8"
libffi = "4.1"
